<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/topNavigationLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@color/colorAccent"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="start"
            >
            <TextView
                android:id="@+id/cancel"
                android:text="@string/cancel"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:gravity="start|center_vertical"
                android:layout_gravity="start|center_vertical"
                android:layout_width="wrap_content"
                android:scaleType="centerInside"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="end"
            >
            <TextView
                android:id="@+id/save"
                android:text="@string/save"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:gravity="start|center_vertical"
                android:layout_gravity="start|center_vertical"
                android:layout_width="wrap_content"
                android:scaleType="centerInside"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/itemRV"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorAccent"
        android:gravity="center_vertical|center_horizontal"
        >
        <androidx.cardview.widget.CardView
            android:id="@+id/chatCV"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp"
            android:layout_margin="10dp">
            <ImageView
                android:id="@+id/topPhotoIV"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginRight="8dp"
                android:background="@color/colorPrimary"
                android:scaleType="center">
            </ImageView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorAccent"
        android:gravity="start"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/main_information"
            android:textSize="25sp"
            android:textColor="#000000"
            android:padding="20dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorAccent"
            android:gravity="start"
            >

            <TextView
                android:id="@+id/firstNameTag"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:text="@string/first_name"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorAccent"
            android:gravity="start"
            >

            <TextView
                android:id="@+id/lastNameTag"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:text="@string/last_name"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="40dp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sub_information"
            android:textSize="25sp"
            android:textColor="#000000"
            android:padding="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorAccent"
            android:gravity="start"
            >

            <TextView
                android:id="@+id/emailTag"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:text="@string/email"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="45dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorAccent"
            android:gravity="start"
            >

            <TextView
                android:id="@+id/phoneTag"
                android:layout_width="120dp"
                android:layout_height="30dp"
                android:text="@string/phone"
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="45dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>